--- a/Moocl/src/main/resources/templates/index.html
+++ b/Moocl/src/main/resources/templates/index.html
@@ -1,17 +1,1 @@
-<html>
-
-<head>
-  <meta charset=utf-8>
-  <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>frontend</title>
-  <link href=/static/css/app.b90901ededcff9615586319dd116ebae.css rel=stylesheet>
-</head>
-
-<body>
-  <div id=app></div>
-  <script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script>
-  <script type=text/javascript src=/static/js/vendor.2c23163e8eec91d18346.js></script>
-  <script type=text/javascript src=/static/js/app.cfb796c0d3307967029f.js></script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>frontend</title><link href=/static/css/app.85cd0b7f1ed12cde56e5c4246f923c60.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.6fc08bd0873c67b8d96f.js></script><script type=text/javascript src=/static/js/app.ba16b44ce5a432137261.js></script></body></html>
